apps/flask-app/metrics-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: metrics-service
  namespace: prod
  labels:
    app: flask
spec:
  type: ClusterIP
  selector:
    app: flask
  ports:
    - name: metrics
      port: 9090
      targetPort: metrics
