apps/flask-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-service
  labels:
    app: flask
spec:
  type: ClusterIP
  selector:
    app: flask
  ports:
    - name: http
      port: 80
      targetPort: http
